fixed paddings/gap/h

--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,14 +1,34 @@
-.faq-container {
-  padding: 40px;
-  /* outline: 2px solid green; */
+/*--------------- FAQ SECTION ---------------------*/
+
+.faq {
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
+
+/* Tablet */
+@media screen and (min-width: 768px) {
+  .faq {
+    padding-top: calc(124px / 2);
+    padding-bottom: calc(124px / 2);
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px) {
+  .faq {
+    padding-top: calc(164px / 2);
+    padding-bottom: calc(164px / 2);
+  }
+}
+
+/*--------------- FAQ CONTAINER ---------------------*/
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
   .faq-container {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 20px;
+    gap: 104px;
     align-items: end;
   }
 }
@@ -30,6 +50,7 @@
     font-size: 52px;
     line-height: 123%;
     letter-spacing: 0.03em;
+    margin-bottom: 40px;
   }
 }
 
@@ -40,6 +61,7 @@
     font-size: 108px;
     line-height: 115%;
     letter-spacing: 0.02em;
+    margin-bottom: 60px;
   }
 }
 
@@ -55,6 +77,7 @@
     background-position: left bottom;
     background-size: 526px 408px;
     padding-bottom: 648px;
+    margin-bottom: 0;
   }
 }
 
@@ -195,7 +218,7 @@
   content: '';
 }
 
-.accordion-container .ac.is-active > .ac-header{
+.accordion-container .ac.is-active > .ac-header {
   margin-bottom: 24px;
 }
 
@@ -204,7 +227,6 @@
   border-radius: 16px;
 }
 /*--------------- ACCORDION TEXT-CONTAINER --------------------*/
-
 
 /*--------------- ACCORDION TEXT --------------------*/
 
